--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/webhooks/stripe"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@lucia-auth/adapter-postgresql": "^2.0.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -40,6 +43,7 @@
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "server-only": "^0.0.1",
     "stripe": "^14.7.0",
     "superjson": "^2.2.1",
